--- a/src/engine/ruleset/integrations/docker-listener/decoders/docker-listener.yml
+++ b/src/engine/ruleset/integrations/docker-listener/decoders/docker-listener.yml
@@ -104,7 +104,7 @@ definitions:
     update: change
 
 normalize:
- - check: +exists/~json.docker
+ - check: +exists/$~json.docker
    map:
     - event.module: docker-listener
     - event.dataset: wodle-docker-listener
@@ -127,7 +127,7 @@ normalize:
     - process.command_line: $~tmp.docker_command
     - process.exit_code: $~json.docker.Actor.Attributes.exitCode
     - process.pid: $~json.docker.execID
- - check: +string_equal/~json.docker.Type/container AND +string_not_equal/~json.docker.Actor.Attributes.exitCode/0
+ - check: +string_equal/$~json.docker.Type/container AND +string_not_equal/$~json.docker.Actor.Attributes.exitCode/0
    map:
     - event.outcome: failed
 
