--- a/src/engine/ruleset/integrations/fortinet/decoders/fortinet-firewall.yml
+++ b/src/engine/ruleset/integrations/fortinet/decoders/fortinet-firewall.yml
@@ -244,7 +244,7 @@ normalize:
     map:
       - event.category: [network]
       - event.type: [connection]
-  - check: +string_equal/~tmp.type/traffic OR +string_equal/~tmp.type/utm
+  - check: +string_equal/$~tmp.type/traffic OR +string_equal/$~tmp.type/utm
     map:
       - event.category: [network]
   - check:
@@ -252,14 +252,14 @@ normalize:
     map:
       - event.type: [connection]
   - check: >-
-        +string_equal/~tmp.type/traffic AND (+string_equal/event.action/block OR +string_equal/event.action/blocked OR
-        +string_equal/event.action/deny OR +string_equal/event.action/close OR
-        +string_equal/event.action/server-rst OR +string_equal/~tmp.utmaction/block)
+        +string_equal/$~tmp.type/traffic AND (+string_equal/$event.action/block OR +string_equal/$event.action/blocked OR
+        +string_equal/$event.action/deny OR +string_equal/$event.action/close OR
+        +string_equal/$event.action/server-rst OR +string_equal/$~tmp.utmaction/block)
     map:
       - event.type: +array_append/denied
   - check: >-
-        +string_equal/~tmp.type/traffic AND +not_exists/~tmp.utmaction AND
-        (+string_equal/event.action/dns OR +string_equal/event.action/accept OR +string_equal/event.action/ip-conn)
+        +string_equal/$~tmp.type/traffic AND +not_exists/$~tmp.utmaction AND
+        (+string_equal/$event.action/dns OR +string_equal/$event.action/accept OR +string_equal/$event.action/ip-conn)
     map:
       - event.type: +array_append/allowed
   - check:
@@ -289,21 +289,21 @@ normalize:
     - source.packets: +exists
     map:
     - network.packets: $source.packets
-  - check: +string_equal/~tmp.type/traffic AND +exists/destination.ip
+  - check: +string_equal/$~tmp.type/traffic AND +exists/$destination.ip
     map:
       - related.ip: +array_append/$destination.ip
 
   # Check-mapping for firewall-utm
   - check: >-
-        +string_equal/~tmp.type/utm AND (+string_equal/event.action/block OR
-        +string_equal/event.action/blocked OR +string_equal/event.action/deny OR
-        +string_equal/event.action/close OR +string_equal/event.action/server-rst OR
-        +string_equal/event.action/dropped)
+        +string_equal/$~tmp.type/utm AND (+string_equal/$event.action/block OR
+        +string_equal/$event.action/blocked OR +string_equal/$event.action/deny OR
+        +string_equal/$event.action/close OR +string_equal/$event.action/server-rst OR
+        +string_equal/$event.action/dropped)
     map:
       - event.type: +array_append/denied
   - check: >-
-        +string_equal/~tmp.type/utm AND (+string_equal/event.action/pass OR
-        +string_equal/event.action/passthrough OR +string_equal/event.action/exempt)
+        +string_equal/$~tmp.type/utm AND (+string_equal/$event.action/pass OR
+        +string_equal/$event.action/passthrough OR +string_equal/$event.action/exempt)
     map:
       - event.type: +array_append/allowed
   - check:
@@ -319,10 +319,10 @@ normalize:
     - destination.ip: +exists
     map:
       - dns.resolved_ip: [$destination.ip]
-  - check: +string_equal/~tmp.type/utm AND +exists/destination.ip AND +not_exists/~tmp.ipaddr
+  - check: +string_equal/$~tmp.type/utm AND +exists/$destination.ip AND +not_exists/$~tmp.ipaddr
     map:
       - related.ip: +array_append/$destination.ip
-  - check: +string_equal/~tmp.type/utm AND +exists/~tmp.ipaddr
+  - check: +string_equal/$~tmp.type/utm AND +exists/$~tmp.ipaddr
     map:
       - related.ip: +merge/$~tmp.ipaddr_array
   - check:
@@ -336,8 +336,8 @@ normalize:
     map:
       - event.category: +array_append/intrusion_detection
   - check: >-
-        +string_equal/~tmp.type/utm AND +not_exists/~tmp.attack AND
-        (+regex_match/~tmp.subtype/ips OR +regex_match/~tmp.subtype/virus)
+        +string_equal/$~tmp.type/utm AND +not_exists/$~tmp.attack AND
+        (+regex_match/$~tmp.subtype/ips OR +regex_match/$~tmp.subtype/virus)
     map:
       - event.kind: alert
   - check:
