--- a/src/engine/ruleset/integrations/nginx/decoders/nginx-access.yml
+++ b/src/engine/ruleset/integrations/nginx/decoders/nginx-access.yml
@@ -105,7 +105,7 @@ normalize:
   # if first byte 192 && seccondByte 168 -> private
   # if first byte 172 && seccondByte [16;31] -> private
   # if first byte is 127 -> private
-  - check: +ip_cidr_match/~ip1/10.0.0.0/8 OR +ip_cidr_match/~ip1/192.168.0.0/16 OR +ip_cidr_match/~ip1/172.16.0.0/13 OR +ip_cidr_match/~ip1/172.24.0.0/14 OR +ip_cidr_match/~ip1/172.28.0.0/15 OR +ip_cidr_match/~ip1/172.30.0.0/16 OR +ip_cidr_match/~ip1/172.31.0.0/32 OR +ip_cidr_match/~ip1/127.0.0.0/8
+  - check: +ip_cidr_match/$~ip1/10.0.0.0/8 OR +ip_cidr_match/$~ip1/192.168.0.0/16 OR +ip_cidr_match/$~ip1/172.16.0.0/13 OR +ip_cidr_match/$~ip1/172.24.0.0/14 OR +ip_cidr_match/$~ip1/172.28.0.0/15 OR +ip_cidr_match/$~ip1/172.30.0.0/16 OR +ip_cidr_match/$~ip1/172.31.0.0/32 OR +ip_cidr_match/$~ip1/127.0.0.0/8
     map:
       - ~ip1_private: true
   - check:
@@ -118,7 +118,7 @@ normalize:
       - source.address: $~ip1
 
   # IP2
-  - check: +ip_cidr_match/~ip2/10.0.0.0/8 OR +ip_cidr_match/~ip2/192.168.0.0/16 OR +ip_cidr_match/~ip2/172.16.0.0/13 OR +ip_cidr_match/~ip2/172.24.0.0/14 OR +ip_cidr_match/~ip2/172.28.0.0/15 OR +ip_cidr_match/~ip2/172.30.0.0/16 OR +ip_cidr_match/~ip2/172.31.0.0/32 OR +ip_cidr_match/~ip2/127.0.0.0/8
+  - check: +ip_cidr_match/$~ip2/10.0.0.0/8 OR +ip_cidr_match/$~ip2/192.168.0.0/16 OR +ip_cidr_match/$~ip2/172.16.0.0/13 OR +ip_cidr_match/$~ip2/172.24.0.0/14 OR +ip_cidr_match/$~ip2/172.28.0.0/15 OR +ip_cidr_match/$~ip2/172.30.0.0/16 OR +ip_cidr_match/$~ip2/172.31.0.0/32 OR +ip_cidr_match/$~ip2/127.0.0.0/8
     map:
       - ~ip2_private: true
   - check:
@@ -132,7 +132,7 @@ normalize:
       - source.address: $~ip2
 
   # IP3
-  - check: +ip_cidr_match/~ip3/10.0.0.0/8 OR +ip_cidr_match/~ip3/192.168.0.0/16 OR +ip_cidr_match/~ip3/172.16.0.0/13 OR +ip_cidr_match/~ip3/172.24.0.0/14 OR +ip_cidr_match/~ip3/172.28.0.0/15 OR +ip_cidr_match/~ip3/172.30.0.0/16 OR +ip_cidr_match/~ip3/172.31.0.0/32 OR +ip_cidr_match/~ip3/127.0.0.0/8
+  - check: +ip_cidr_match/$~ip3/10.0.0.0/8 OR +ip_cidr_match/$~ip3/192.168.0.0/16 OR +ip_cidr_match/$~ip3/172.16.0.0/13 OR +ip_cidr_match/$~ip3/172.24.0.0/14 OR +ip_cidr_match/$~ip3/172.28.0.0/15 OR +ip_cidr_match/$~ip3/172.30.0.0/16 OR +ip_cidr_match/$~ip3/172.31.0.0/32 OR +ip_cidr_match/$~ip3/127.0.0.0/8
     map:
       - ~ip3_private: true
   - check:
