--- a/src/engine/ruleset/integrations/suricata/decoders/suricata.yml
+++ b/src/engine/ruleset/integrations/suricata/decoders/suricata.yml
@@ -18,7 +18,7 @@ metadata:
   description: Decoder for Suricata open source network analysis and threat detection software.
 
 definitions:
-  is_good_appProto: +string_not_equal/~suricata.eve.app_proto/failed AND +string_not_equal/~suricata.eve.app_proto/template AND +string_not_equal/~suricata.eve.app_proto/template-rust
+  is_good_appProto: +string_not_equal/$~suricata.eve.app_proto/failed AND +string_not_equal/$~suricata.eve.app_proto/template AND +string_not_equal/$~suricata.eve.app_proto/template-rust
 
 check:
   - ~json.event_type: +exists
