--- a/src/engine/ruleset/integrations/system/decoders/system-auth.yml
+++ b/src/engine/ruleset/integrations/system/decoders/system-auth.yml
@@ -20,15 +20,15 @@ metadata:
 
 definitions:
   isAuthProcess: >-
-    process.name=="sshd"
-    OR process.name=="sudo"
-    OR process.name=="groupadd"
-    OR process.name=="useradd"
-    OR process.name=="groupdel"
-    OR process.name=="groupmod"
-    OR process.name=="userdel"
-    OR process.name=="usermod"
-    OR process.name=="CRON"
+    $process.name=="sshd"
+    OR $process.name=="sudo"
+    OR $process.name=="groupadd"
+    OR $process.name=="useradd"
+    OR $process.name=="groupdel"
+    OR $process.name=="groupmod"
+    OR $process.name=="userdel"
+    OR $process.name=="usermod"
+    OR $process.name=="CRON"
 
 #TODO: Once the events arrive tagged, uncommnet following line and comment previous
 #  isAuthProcess: >-
@@ -65,21 +65,21 @@ normalize:
       - message: "<~system.auth.ssh.event>: Read from socket failed: Connection reset by peer [preauth]"
       - message: "Received <~system.auth.ssh.event> from <source.ip>: <~>:  [<~>]"
 
-  - check: ~system.auth.ssh.event=="Accepted" OR ~system.auth.ssh.event=="USER_PROCESS"
+  - check: $~system.auth.ssh.event=="Accepted" OR $~system.auth.ssh.event=="USER_PROCESS"
     map:
       - event.type: +array_append/access/allowed
       - event.category: +array_append/authentication/session
       - event.action: "ssh_login"
       - event.outcome: "success"
 
-  - check: ~system.auth.ssh.event=="DEAD_PROCESS" OR ~system.auth.ssh.event=="disconnect"
+  - check: $~system.auth.ssh.event=="DEAD_PROCESS" OR $~system.auth.ssh.event=="disconnect"
     map:
       - event.type: +array_append/end
       - event.category: +array_append/authentication/session
       - event.action: "ssh_login"
       - event.outcome: "success"
 
-  - check: ~system.auth.ssh.event=="Invalid" OR ~system.auth.ssh.event=="Failed" OR ~system.auth.ssh.event=="failures" OR ~system.auth.ssh.event=="fatal"
+  - check: $~system.auth.ssh.event=="Invalid" OR $~system.auth.ssh.event=="Failed" OR $~system.auth.ssh.event=="failures" OR $~system.auth.ssh.event=="fatal"
     map:
       - event.type: +array_append/access/denied
       - event.category: +array_append/authentication/session
@@ -124,46 +124,46 @@ normalize:
     map:
       - user.name: $~system.auth.pam.foruser.name
 
-  - check: ~system.auth.pam.session.action=="opened" OR ~system.auth.ssh.event=="USER_PROCESS"
+  - check: $~system.auth.pam.session.action=="opened" OR $~system.auth.ssh.event=="USER_PROCESS"
     map:
       - event.type: +array_append/start
 
-  - check: ~system.auth.pam.session.action=="closed"
+  - check: $~system.auth.pam.session.action=="closed"
     map:
       - event.type: +array_append/end
 
-  - check: process.name=="groupadd" OR process.name=="useradd"
+  - check: $process.name=="groupadd" OR $process.name=="useradd"
     logpar:
       - message: "new group: name=<group.name>, GID=<group.id>"
       - message: "new user: name=<user.name>, UID=<user.id>, GID=<group.id>, home=<~system.auth.useradd.home>, shell=<~system.auth.useradd.shell>(?,<~>)"
       - message: "group added to <file.name>: name=<group.name>(?, GID=<group.id>)"
       - message: "<~system.auth.event.outcome> adding user '<user.name>'(?,<~>)"
 
-  - check: ~system.auth.event.outcome=="failed" OR ~system.auth.pam.session.action=="failure"
+  - check: $~system.auth.event.outcome=="failed" OR $~system.auth.pam.session.action=="failure"
     map:
       - event.outcome: "failure"
 
-  - check: process.name=="groupadd" OR process.name=="groupdel" OR process.name=="groupmod" OR process.name=="useradd" OR process.name=="userdel" OR process.name=="usermod"
+  - check: $process.name=="groupadd" OR $process.name=="groupdel" OR $process.name=="groupmod" OR $process.name=="useradd" OR $process.name=="userdel" OR $process.name=="usermod"
     map:
       - event.category: +array_append/iam
 
-  - check: process.name=="useradd" OR process.name=="userdel" OR process.name=="usermod"
+  - check: $process.name=="useradd" OR $process.name=="userdel" OR $process.name=="usermod"
     map:
       - event.type: +array_append/user
 
-  - check: process.name=="groupadd" OR process.name=="groupdel" OR process.name=="groupmod"
+  - check: $process.name=="groupadd" OR $process.name=="groupdel" OR $process.name=="groupmod"
     map:
       - event.type: +array_append/group
 
-  - check: process.name=="groupadd" OR process.name=="useradd"
+  - check: $process.name=="groupadd" OR $process.name=="useradd"
     map:
       - event.type: +array_append/creation
 
-  - check: process.name=="groupdel" OR process.name=="userdel"
+  - check: $process.name=="groupdel" OR $process.name=="userdel"
     map:
       - event.type: +array_append/deletion
 
-  - check: process.name=="groupmod" OR process.name=="usermod"
+  - check: $process.name=="groupmod" OR $process.name=="usermod"
     map:
       - event.type: +array_append/change
 
