--- a/src/engine/ruleset/integrations/windows/decoders/windows-powershell.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-powershell.yml
@@ -47,11 +47,11 @@ normalize:
    - file.extension: $~temp.file_data.ext
    - file.name: $~temp.file_data.name
 
- - check: event.code=="400"
+ - check: $event.code=="400"
    map:
     - event.type: +array_append/start
 
- - check: event.code=="403"
+ - check: $event.code=="403"
    map:
     - event.type: +array_append/end
 
